--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar border-new" src="images/Ximenaaaaa.jpg">
+            <img class="avatar border-new" src="Ximenaaaaa.jpg">
             <div class="text">
                 <h3>Ximena Lynette Sanchez Ruiz</h3>
                 <p>Best Girlfriend Ever!!!</p>
